# qinyin-backend

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: auth.rs  lib.rs  tools.rs
api/src/controller/: collect.rs  creation.rs  friends.rs  lyrics.rs  mod.rs  permission.rs  post.rs  role.rs  role_permission.rs  score.rs  setting.rs  song.rs  song_type.rs  user.rs  user_role.rs
api/src/middleware/: auth.rs
entity/src/: collect.rs  creation.rs  friends.rs  lib.rs  lyric.rs  lyrics.rs  mod.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  score.rs  setting.rs  song.rs  song_type.rs  user.rs  user_role.rs
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: collect.rs  creation.rs  friends.rs  lib.rs  lyrics.rs  permission.rs  role.rs  role_permission.rs  score.rs  setting.rs  song.rs  song_type.rs  user.rs  user_role.rs
src/: main.rs
