[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
dotenvy = "0.15.7"
serde = "1.0.215"
serde_json = "1.0.133"
tera = "1.20.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
jsonwebtoken = "9.3.0"

